2014-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Rotate Changelog for new year.  Update documentation copyrights
	for new year.


