@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020141231"
-#define public MagickPackageReleaseDate "snapshot-20141231"
+#define public MagickPackageVersionAddendum ".020150101"
+#define public MagickPackageReleaseDate "snapshot-20150101"
